5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1635_2447.log
== TEST (2019-04-10 13:51:17) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(msg)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:51:56) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(msg)


-- EXECUTION TIME:
0.158657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:52:29) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(around(msg,2)


-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:52:44) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(round(msg,2))


-- EXECUTION TIME:
0.123325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:52:46) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(round(msg,2))


-- EXECUTION TIME:
0.152861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:52:47) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(round(msg,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:53:15) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta X", z
else:
	msg="Troco de Y", w
print(round(msg, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:54:07) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta ", z
else:
	msg="Troco de ", w
print(round(msg, 2))


-- EXECUTION TIME:
0.27625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:54:16) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	msg="Falta ", z
else:
	msg="Troco de ", w
print(round(msg, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:57:56) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	print("Falta ",round(z, 2))
else:
	print("Troco de ",round(w, 2))



-- EXECUTION TIME:
0.205757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:59:20) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	print("Falta ",round(z, 2))
else:
	print("Troco de ",round(w, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:59:41) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=(x-y)
w=(y-x)
if(x>y):
	print("Falta ",round(z, 2))
else:
	print("Troco de ",round(w, 2))



-- EXECUTION TIME:
0.152548
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
